# django-messages-display

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg
src/django_messages_display/static/django_messages_display/: django_messages_display.css
src/django_messages_display/templates/django_messages_display/: close_button.html  django_messages_display.html
src/django_messages_display/templatetags/: django_messages_display_tags.py
