[metadata]
name = django-messages-display
version = 0.2.1
description = Display messages from django.contrib.messages as notifications in the browser.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/demestav/django-messages-display
author = Demetris Stavrou
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
package_dir=
    =src
include_package_data = true
packages = find:
python_requires = >=3.7
install_requires =
    Django>=2.2

[options.packages.find]
where = src